made minor amendments in header

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <title>This is our website</title>
-<h1>This is my header</h1>
+<h1>This is my Changed header</h1>
 <p>I like Data Science and Machine Learning</p>
 </html>
 
